--- a/css/legal-page.css
+++ b/css/legal-page.css
@@ -1,4 +1,8 @@
 .legal-header {
+  position: fixed;
+top: 0;
+left: 0;
+right: 0;
   background-color: #e2e2e2;
   padding: 30px;
   margin-top: 60px;
@@ -15,17 +19,22 @@ main {
 }
 
 section {
+  top: 140px;
   display: flex;
   gap: 30px;
   position: relative;
   border-bottom: 1px solid grey;
   padding: 30px;
+  padding-bottom: 100px;
   max-width: 900px;
   margin: 0 auto;
   color: white;
 }
 
 .section-label {
+  position: sticky;
+  top: 180px;
+  left: 40px;
   width: 100%;
   background-color: #2b2d3b;
   height: max-content;
@@ -53,6 +62,10 @@ section {
 }
 
 footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
   display: flex;
   align-items: center;
   width: 100%;
