--- a/css/legal-page.css
+++ b/css/legal-page.css
@@ -3,10 +3,11 @@
 top: 0;
 left: 0;
 right: 0;
-  background-color: #e2e2e2;
+  background-color: img;
   padding: 30px;
   margin-top: 60px;
   width: 100%;
+  z-index: 10;
 }
 
 .legal-header h1 {
